From the aggregate-reports page, My Reports table overflow fix. Removing conflicting CSS

--- a/webapp/src/main/webapp/src/primeng-overrides.less
+++ b/webapp/src/main/webapp/src/primeng-overrides.less
@@ -305,10 +305,7 @@ writing-trait-scores {
     padding-left: 8px !important;
   }
 }
-.ui-table td.ng-star-inserted {
-  min-width: 50px;
-  max-width: 200px;
-}
+
 body .ui-widget {
   font-family: inherit;
 }
